--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -11,12 +11,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!-- junit测试配置第一步 -->
+    <instrumentation android:targetPackage="com.ylczjqnfc" android:name="android.test.InstrumentationTestRunner"></instrumentation>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <!-- junit测试配置第二步 -->
+        <uses-library android:name="android.test.runner"/>
         <activity
             android:name="com.ylczjqnfc.activity.SplashScreenActivity"
             android:label="@string/app_name" >
