--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,6 +45,12 @@
             
         </activity>
         <activity android:name="com.ylczjqnfc.activity.MainActivity"></activity>
+        <activity android:name="com.ylczjqnfc.test.ViewPagerActivity">
+            
+        </activity>
+        <activity android:name="com.ylczjqnfc.test.ViewPagerActivity2">
+            
+        </activity>
     </application>
 
 </manifest>
