--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,6 +51,10 @@
         <activity android:name="com.ylczjqnfc.test.ViewPagerActivity2">
             
         </activity>
+        <activity android:name="com.ylczjqnfc.test.OneActivity">
+            
+        </activity>
+        <activity android:name="com.ylczjqnfc.test.TwoActivity"></activity>
     </application>
 
 </manifest>
